<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="252dp"
        android:layout_height="222dp" />

    <EditText
        android:id="@+id/etEmail"
        style=""
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:clipToOutline="true"
        android:hint="@string/Email"
        android:outlineProvider="background" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:clipToOutline="true"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:outlineProvider="background" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/botonAceptar"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/btResgistro"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/black"
        android:text="@string/Registro"
        app:cornerRadius="0dp" />

</LinearLayout>