<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:minHeight="60dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/whiskey"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_media_previous"
            app:tint="@color/white"
            tools:layout_editor_absoluteX="16dp" />


        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|center_vertical"
            app:tint="@color/whiskey"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="15dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@drawable/degradado_blanco"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="serif"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/categoria_halloween"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/categoria_accion_de_gracias"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/categoria_navidad"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/categoria_san_valentin"
            app:cornerRadius="0dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>